--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mac Screen for Mobile Devices</title>
 
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://tmaguire1.github.io/MacScreenForMobile/style.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
 </section>
 
 
-<script src="./script.js"></script>
+<script src="https://tmaguire1.github.io/MacScreenForMobile/script.js"></script>
 
 </body>
 
